# LocoBot

./: PID.py  README.md  controller.py
Exercise_1/: .gitignore  MNIST_training.ipynb
Exercise_1/my_package/: CMakeLists.txt  package.xml
Exercise_1/vel_control/: package.xml
Exercise_1_Yumeng/CNN/: model.py  train.ipynb
Exercise_1_Yumeng/vel_control/: CMakeLists.txt
Exercise_One/: CMakeLists.txt  package.xml
Exercise_One/launch/: Exercise_One_launch_file.launch
Exercise_One/src/: listener.py  talker.py
Exercise_Three/: CMakeLists.txt  package.xml
Exercise_Three/launch/: Exercise_Three_launch_file.launch
Exercise_Three/src/: pid.py
FirstExercise_Yicong/: nmist.py
FirstExercise_Yicong/Versuch 1/: simple.py  simple_publisher.py  simple_subscriber.py
FirstExercise_Yicong/Versuch 3/: sinus_pid.py
Mohamed Mahmoud/exercise_three/: CMakeLists.txt
New folder/: listener.py  mnist_pytorch1.py  talker.py
excercise1/: CMakeLists.txt  package.xml
excercise1/nodes/: pid.py
excercise1/publisher-subscriber-main/: package.xml
exercise_three/: package.xml
exercise_three/launch/: exercise_three_launch_file.launch
first_ex/: CMakeLists.txt  package.xml
freezing/: README.md  train_fine_tuning.py  vint_fine_tuning.yaml
lss_versuch1/: CMakeLists.txt  README.md  package.xml
lss_versuch2/: CMakeLists.txt  package.xml
lss_versuch3/: CMakeLists.txt  README.md  package.xml
mnist/: mnist.py
publisher-subscriber-main/: CMakeLists.txt  README.md
publisher-subscriber-main/scripts/: listener.py
trainPackage/: cnnMnist.py  train.py
(+22 files in other folders)
